--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,6 @@ block content
 		#mainContent
 			header
 				h1 BitPoints
-				p Ditch the Deck
 			section#actions
 				div.join
 					h2 Join a Room In Progress
@@ -23,8 +22,8 @@ block content
 						input#join-room.halfwidth(type='submit',value='Create a Room')
 		#supplementalContent
 			ul
-				li Scrum Poker, Evolved
 				li Estimate Anywhere
+				li Ditch the Decks
 				li Go Faster
 			p.description.
 				BitPoints helps scrum teams estimate stories by getting rid of physical <em>scrum poker</em> decks and creating a more visible platform for team members to post and discuss points. Average estimates are automatically calculated and high/low estimates are highlighted for discussion. Perfect for distributed scrum teams, as team members can join from any internet-connected device.
