--- a/views/index.jade
+++ b/views/index.jade
@@ -9,8 +9,8 @@ block content
 				div.join
 					h2 Join a Room In Progress
 					form(id="join", action="/roomJoin")
-						input#room-id.halfwidth(name='room-id',type='text',placeholder='Room ID')
-						input#user.halfwidth(name='user',type='text',placeholder='Name')
+						input#room-id.halfwidth(name='room-id',type='text',placeholder='Room ID*',data-required='true')
+						input#user.halfwidth(name='user',type='text',placeholder='Name*',data-required='true')
 						input#email(name='email',type='text',placeholder='Gravatar Email')
 						input(type='submit', value='Join a Room')#join-room
 				div#stats.
@@ -18,7 +18,7 @@ block content
 				div.create
 					h2 Create a new BitPoints Room
 					form(id="create", action="/create")
-						input#title.halfwidth(name='title',type='text',placeholder='Enter a Room Title')
+						input#title.halfwidth(name='title',type='text',placeholder='Room Title*',data-required='true')
 						input#join-room.halfwidth(type='submit',value='Create a Room')
 		#supplementalContent
 			ul
