remove unneeded styles and shrink stat text

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -98,10 +98,6 @@ html {
 				color: @link;
 				height: 70px;
 			}
-			#stats {
-				margin-top: 100px;
-				opacity: .5;
-			}
 		}
 		#actions {
 			.join, .create {
@@ -166,6 +162,7 @@ html {
 			}
 			#stats {
 				text-align: right;
+				font-size: 80%;
 			}
 		}
 	}
