--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -64,6 +64,7 @@ html {
 }
 .button(){
 	padding: 0 10px;
+	height: 1.875em;
 	border: none;
 	font: normal 1.2em/1.875em @title;
 	background: @accentColor;
@@ -108,26 +109,38 @@ html {
 				h2 {
 					font: 400 1.2em/1.4em @title;
 					color: @link;
-					display: table;
-				    white-space: nowrap;
-				    overflow: hidden;
+					overflow: hidden;
+					text-align: center;
 
-				    &:before, &:after {
-				      border-top: 1px solid @link;
-				      content: '';
-				      display: table-cell;
-				      position: relative;
-				      top: 0.5em;
-				      width: 45%;
-				    }
+					span {
+						display: inline-block;
+						position: relative;
+					
 
-				    &:before { right: 3%; }
-				    &:after { left: 3%; }
+						&:before, &:after {
+						  content: "";
+						  position: absolute;
+						  height: 1px;
+						  border-top: 1px solid white;
+						  top: 50%;
+						  width: 600px;
+						}
+
+						&:before { 
+							right: 100%;
+	  						margin-right: 10px; 
+	  					}
+						&:after { 
+							left: 100%;
+	  						margin-left: 10px; 
+	  					}
+	  				}
 				}
 
 				input[type=text] {
-					box-sizing: border-box;
+					.box-sizing(border-box);
 					width: 100%;
+					height: 36px;
 					margin: 5px 0;
 					padding: 0 11px;
 					font: 400 1em/34px @sans;
@@ -144,7 +157,7 @@ html {
 
 				input[type=submit] {
 					.button();
-					box-sizing: border-box;
+					.box-sizing(border-box);
 					width: 100%;
 					margin-top: 5px;
 				}
@@ -222,12 +235,12 @@ html {
 	.cardInner, .cardBack {
 		width: 100%;
 		height: 100%;
+		.box-sizing(border-box);
 		position: absolute;
 		top: 0; left: 0;
 		border: 10px*@size solid #fff;
 		border-radius: 5px;
 		box-shadow: 0 0 3px #444;
-		.box-sizing();
 		-webkit-backface-visibility: hidden;
 		-moz-backface-visibility: hidden;
 		-ms-backface-visibility: hidden;
@@ -368,7 +381,7 @@ html {
 			.cardStyle(.5);
 			position: relative;
 			top: auto; left: auto;
-			box-sizing: border-box;
+			.box-sizing(border-box);
 			width: 90px;
 			height: 120px;
 		}
