--- a/views/roomHost.jade
+++ b/views/roomHost.jade
@@ -4,16 +4,24 @@ block content
 	#room
 		h1 Welcome to #{title} (#{roomId})
 
-		#deckTypes
-			span.title Deck Type:
-			.option
-				label(for="fibonacci")
-					input(type="radio", value="fibonacci", name="deckType", id="fibonacci")
-					span Fibonacci
-			.option
-				label(for="standard")
-					input(type="radio", value="standard", name="deckType", id="standard", checked="checked")
-					span Standard
+		ul#settings
+			li
+				i.fa.fa-cog.fa-2x
+				.drop
+					span.title Deck Type:
+					.control
+						.option
+							label(for="standard")
+								input(type="radio", value="standard", name="deckType", id="standard", checked="checked")
+								span Standard
+						.option
+							label(for="fibonacci")
+								input(type="radio", value="fibonacci", name="deckType", id="fibonacci")
+								span Fibonacci
+					span.title Invite URL:
+					.control
+						span bitpoints.io/#{inviteId}
+							i.fa.fa-share-square-o#showLink(data-link="bitpoints.io/#{inviteId}")
 
 		button#toggleRound Begin Estimating
 
@@ -25,9 +33,7 @@ block content
 		ul#users
 
 	script.
-		var bp = {
-			roomId: #{roomId},
-			title: "#{title}"
-		}
+		bp.roomId = #{roomId};
+		bp.title = "#{title}";
 	script(src="/socket.io/socket.io.js")
 	script(src="/javascripts/client.js")
