--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -309,17 +309,8 @@ html {
 		.cardValue,
 		.cornerValue {
 			color: @darktext;
-			&.coffee {
-				font-size: 0;
-				text-indent: 9999px;
-				&:before {
-					content: '';
-					display: block;
-					position: absolute;
-					margin: 0 auto;
-					background: url("/images/coffee-black.png") no-repeat;
-					background-origin: content-box;
-				}
+			.fa {
+				color: @darktext;
 			}
 		}
 		.cardValue {
@@ -328,14 +319,6 @@ html {
 			font: normal 6em/2.4em @sans;
 			&.min { color: #000fd2; }
 			&.max { color: #d21900; }
-
-			&.coffee:before {
-				top: 30px;
-				width: 180px;
-				height: 180px;
-				background-position: center center;
-				background-size: 60%;
-			}
 		}
 		.cornerValue {
 			position: absolute;
@@ -343,28 +326,14 @@ html {
 			width: 50px;
 			text-align: left;
 
-			&.coffee:before {
-				width: 25px;
-				height: 25px;
-				background-size: 100%;
-			}
-
 			&.topleft {
 				top: 0;
 				left: 0;
-
-				&.coffee:before {
-					background-position: top left;
-				}
 			}
 			&.bottomright {
 				bottom: 0;
 				right: 0;
 				.rotate(180deg);
-
-				&.coffee:before {
-					background-position: bottom right;
-				}
 			}
 		}
 	}
@@ -437,19 +406,8 @@ table#estimateOptions {
 		&.blank {
 			background: none !important;
 		}
-		&.coffee {
-			font-size: 0;
-			&:before {
-				content: '';
-				display: block;
-				width: 48px;
-				height: 48px;
-				background: url("../images/coffee-black.png") no-repeat center center;
-				background-origin: content-box;
-				background-size: 80%;
-				margin: 0 auto;
-			}
-
+		.fa {
+			color: @darktext;
 		}
 	}
 }
@@ -544,9 +502,13 @@ body { perspective: 1000; }
 				display: block;
 			}
 
+			.dropItem + .dropItem {
+				margin-top: 10px;
+			}
+
 			.title {
 				font-weight: bold;
-				width: 150px;
+				width: 130px;
 				display: inline-block;
 				vertical-align: top;
 				line-height: 2em;
