--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,5 +7,5 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js")
     script(src='/javascripts/bitpoints.js')
-  body
+  body(class='#{bodyClass}')
     block content
