add url and a home link to the error page

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -668,7 +668,7 @@ ul#users {
 }
 
 #error {
-	padding-top: 80px;
+	padding-top: 20px;
 	overflow: hidden;
 	.errorCard {
 		.cardStyle(1.5);
@@ -677,7 +677,7 @@ ul#users {
 		margin: 0 auto;
 	}
 	p {
-		margin: 10px 0;
+		margin: 20px 0;
 		text-align: center;
 	}
 }
@@ -749,6 +749,10 @@ ul#users {
 				display: none;
 			}
 		}
+	}
+
+	#error {
+		padding-top: 80px;
 	}
 
 	table#estimateOptions {
