--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,11 +1,16 @@
 doctype html
 html
-  head
-    title BitPoints
-    meta(name="viewport" content="width=device-width, initial-scale=1, user-scalable=no")
-    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css')
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    script(src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js")
-    script(src='/javascripts/bitpoints.js')
-  body(class='#{bodyClass}')
-    block content
+	head
+		title BitPoints
+		meta(name="viewport" content="width=device-width, initial-scale=1, user-scalable=no")
+		link(rel='stylesheet', href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css')
+		link(rel='stylesheet', href='/stylesheets/style.css')
+		script(src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js")
+		script(src='/javascripts/bitpoints.js')
+
+	if bodyClass!=null
+		body(class='#{bodyClass}')
+		block content
+	else
+		body
+		block content
